<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".bluetooth.BluetoothFragment"
            style="@style/backgroundTheme">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="@dimen/textTitleWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/maxGap"
                    android:layout_marginEnd="@dimen/maxGap"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/mali_light"
                    android:gravity="center"
                    android:text="@string/textTitleBluetooth"
                    style="@style/textColor"
                    android:textSize="@dimen/titleSize2"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pairedListRV"
                    android:layout_width="0dp"
                    android:layout_height="475dp"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.625"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                    app:layout_constraintVertical_bias="0.0"></androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_to_controllers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="80dp"
                    android:background="@color/btnColor"
                    android:clickable="true"
                    android:contentDescription="@string/actionMoveToControllers"
                    android:src="@drawable/baseline_gamepad_24"
                    style="@style/buttonColor"
                    app:borderWidth="@dimen/borderWidthBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_to_previus"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/nullGap"
                    android:layout_marginStart="45dp"
                    android:layout_marginBottom="80dp"
                    android:background="@color/btnColor"
                    android:clickable="true"
                    android:contentDescription="@string/actionMoveToBluetooth"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:background="@color/txtColor"
                    style="@style/buttonColor"
                    app:borderWidth="@dimen/borderWidthBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewNameApp"
                    android:layout_width="@dimen/nullGap"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginsGapAppName"
                    android:layout_marginEnd="@dimen/marginsGapAppName"
                    android:layout_marginBottom="@dimen/maxGap"
                    android:fontFamily="@font/mali_light"
                    android:gravity="center"
                    android:text="@string/NameApp"
                    style="@style/textColor"
                    android:textSize="@dimen/appNameSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>

</layout>