<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent"
            style="@style/backgroundTheme">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_height="0dp">
                        <TextView
                            android:id="@+id/textViewTitle"
                            android:layout_width="@dimen/textTitleWidth"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mali_light"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/textTitleMain"
                            style="@style/textColor"
                            android:textSize="@dimen/titleSize"
                            android:textStyle="bold"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="0dp">

                        <ImageView
                            android:id="@+id/imageViewRobotimy"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/maxGap"
                            android:layout_marginEnd="@dimen/maxGap"
                            android:layout_marginBottom="@dimen/marginBottonRobotimy"
                            android:src="@drawable/robotnpng"/>

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/textViewNameApp"
                    android:layout_width="@dimen/nullGap"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginsGapAppName"
                    android:layout_marginEnd="@dimen/marginsGapAppName"
                    android:layout_marginBottom="@dimen/maxGap"
                    android:fontFamily="@font/mali_light"
                    android:gravity="center"
                    android:text="@string/NameApp"
                    style="@style/textColor"
                    android:textSize="@dimen/appNameSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />




                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_to_controllers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="80dp"
                    android:background="@color/btnColor"
                    android:clickable="true"
                    android:contentDescription="@string/actionMoveToControllers"
                    android:src="@drawable/baseline_gamepad_24"
                    style="@style/buttonColor"
                    app:borderWidth="@dimen/borderWidthBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_to_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/nullGap"
                    android:layout_marginStart="45dp"
                    android:layout_marginBottom="80dp"
                    android:background="@color/btnColor"
                    android:clickable="true"
                    android:contentDescription="@string/actionMoveToBluetooth"
                    android:src="@android:drawable/stat_sys_data_bluetooth"
                    app:background="@color/txtColor"
                    style="@style/buttonColor"
                    app:borderWidth="@dimen/borderWidthBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>



</layout>